--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>HTML Images</h2>
+<p>HTML images are defined with the img tag:</p>
+
+<img src="https://getrectedloire.github.io/alkalmi/Kocsis%20R%C3%B3bert%20Collage.jpg" alt="W3Schools.com" width="104" height="142">
+
+</body>
+</html>
