--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <h2>HTML Images</h2>
-<p>HTML images are (szia!) defined with the img tag:</p>
+<p> sziasztok! ez az én kollázsom...</p>
 
 <img src="https://getrectedloire.github.io/alkalmi/Kocsis%20R%C3%B3bert%20Collage.jpg" alt="W3Schools.com" width="104" height="142">
 
