--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 
-<h2>HTML Images</h2>
+<h2>Kollázs by.: me</h2>
 <p> sziasztok! ez az én kollázsom...</p>
 
 <img src="https://getrectedloire.github.io/alkalmi/Kocsis%20R%C3%B3bert%20Collage.jpg" alt="W3Schools.com" width="104" height="142">
